bk_ida/gccida/g2/store_expr
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_expr/src/expr.c:4388:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v9; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_expr/src/expr.c:4403:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_expr/src/expr.c:4411:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v33; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_expr/src/expr.c:4420:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v42; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_expr/src/expr.c:4421:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v43; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_expr/src/expr.c:4426:4: error: expected ';' after expression
rtx v48; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_expr/src/expr.c:4426:5: error: use of undeclared identifier 'v48'
rtx v48; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_expr/src/expr.c:4429:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v51; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_expr/src/expr.c:4430:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *tree; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_expr/src/expr.c:4432:4: error: expected ';' after expression
rtx v54; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_expr/src/expr.c:4432:5: error: use of undeclared identifier 'v54'
rtx v54; // rbp 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_expr/src/expr.c:4433:4: error: expected ';' after expression
rtx v55; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_expr/src/expr.c:4433:5: error: use of undeclared identifier 'v55'
rtx v55; // r14 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_expr/src/expr.c:4438:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *copy_size; // [rsp+18h] [rbp-40h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_expr/src/expr.c:4487:22: error: use of undeclared identifier 'machine_mode'
v10 = gen_reg_rtx( ( machine_mode)*( ( unsigned __int8 *)target + 2)); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_expr/src/expr.c:4488:33: error: use of undeclared identifier 'machine_mode'
v12 = expand_expr( imag, v10, ( machine_mode)*( ( unsigned __int8 *)target + 2), EXPAND_NORMAL); 
                                ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_expr/src/expr.c:4539:36: error: use of undeclared identifier 'machine_mode'
v12 = expand_expr( imag, target, ( machine_mode)*( ( unsigned __int8 *)target + 2), EXPAND_NORMAL); 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_expr/src/expr.c:4570:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)v29, 
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_expr/src/expr.c:4571:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)v30, 
  ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/store_expr/src/obj/expr.o] Error 1
